--- a/RestWithASPNET5Udemy/RestWithASPNET5Udemy/RestWithASPNET5Udemy.csproj
+++ b/RestWithASPNET5Udemy/RestWithASPNET5Udemy/RestWithASPNET5Udemy.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\Scripts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+  </ItemGroup>
+
 </Project>
